--- a/register.html
+++ b/register.html
@@ -1,146 +1,119 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>👤 إنشاء حساب</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #1f1c2c, #928dab);
-      color: white;
-      padding-bottom: 120px;
-    }
-    .account-box {
-      background: rgba(255, 255, 255, 0.1);
-      border: 2px solid #ffd700;
-      border-radius: 16px;
-      padding: 25px;
-      margin: 50px auto;
-      text-align: center;
-      max-width: 90%;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-      color: #ffffff;
-    }
-    .account-box h2 {
-      font-size: 26px;
-      margin-bottom: 15px;
-      color: #ffdd57;
-    }
-    .account-box input {
-      display: block;
-      margin: 15px auto;
-      padding: 10px;
-      width: 80%;
-      border-radius: 10px;
-      border: none;
-      font-size: 16px;
-    }
-    .account-box button {
-      margin-top: 15px;
-      padding: 10px 25px;
-      font-size: 16px;
-      background-color: #ffd700;
-      color: #000;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-    }
-    .account-box button:hover {
-      background-color: #e6be00;
-    }
-    .footer {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      background-color: #f8f8f8;
-      border-top: 2px solid #ccc;
-    }
-    .footer td {
-      text-align: center;
-      padding: 10px;
-      font-size: 14px;
-    }
-    .footer a {
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
-    }
-  </style>
-</head>
-<body>
 
-  <div class="account-box">
-    <h2>👤 إنشاء حساب جديد</h2>
-    <input type="text" id="name" placeholder="ادخل اسمك الكامل" />
-    <input type="tel" id="phone" placeholder="ادخل رقم هاتفك (مثال: 771234567)" />
-    <button onclick="saveAccount()">إنشاء الحساب</button>
-    <p id="status" style="margin-top: 15px;"></p>
-  </div>
+<!DOCTYPE html>  <html lang="ar" dir="rtl">  
+<head>  
+  <meta charset="UTF-8">  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <title>👤 إنشاء حساب</title>  
+  <style>  
+    body {  
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
+      background: linear-gradient(to right, #1f1c2c, #928dab);  
+      color: white;  
+      padding-bottom: 120px;  
+    }  .account-box {  
+  background: rgba(255, 255, 255, 0.1);  
+  border: 2px solid #ffd700;  
+  border-radius: 16px;  
+  padding: 25px;  
+  margin: 50px auto;  
+  text-align: center;  
+  max-width: 90%;  
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);  
+  color: #ffffff;  
+}  
 
-  <div class="footer">
-    <table width="100%">
-      <tr align="center">
-        <td><a href="2simpl.html">🏠<br>الرئيسية</a></td>
-        <td><a href="offers.html">📢<br>العروض</a></td>
-        <td><a href="cart.html">🛒<br>السلة</a></td>
-        <td><a href="account.html">👤<br>الحساب</a></td>
-        <td><a href="menu.html">☰<br>القائمة</a></td>
-      </tr>
-    </table>
-  </div>
+.account-box h2 {  
+  font-size: 26px;  
+  margin-bottom: 15px;  
+  color: #ffdd57;  
+}  
 
-  <!-- Firebase SDK -->
-  <script type="module">
-    // Import Firebase functions from CDN (ES modules)
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-app.js";
-    import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-firestore.js";
+.account-box input {  
+  display: block;  
+  margin: 15px auto;  
+  padding: 10px;  
+  width: 80%;  
+  border-radius: 10px;  
+  border: none;  
+  font-size: 16px;  
+}  
 
-    // Firebase config - غيّر القيم حسب مشروعك
-    const firebaseConfig = {
-      apiKey: "AIzaSyBFyrDJ8SSDgOVgug8-5jeVkkXzGtGJh4U",
-      authDomain: "al-najjar-net.firebaseapp.com",
-      projectId: "al-najjar-net",
-      storageBucket: "al-najjar-net.appspot.com",
-      messagingSenderId: "134313830995",
-      appId: "1:134313830995:web:7e55fb6a0099f7f8fcb4a6",
-      measurementId: "G-FSMRSQNLRR"
-    };
+.account-box button {  
+  margin-top: 15px;  
+  padding: 10px 25px;  
+  font-size: 16px;  
+  background-color: #ffd700;  
+  color: #000;  
+  border: none;  
+  border-radius: 10px;  
+  cursor: pointer;  
+}  
 
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+.account-box button:hover {  
+  background-color: #e6be00;  
+}  
 
-    function saveAccount() {
-      const name = document.getElementById("name").value.trim();
-      const phone = document.getElementById("phone").value.trim();
-      const status = document.getElementById("status");
+.footer {  
+  position: fixed;  
+  bottom: 0;  
+  width: 100%;  
+  background-color: #f8f8f8;  
+  border-top: 2px solid #ccc;  
+}  
 
-      if (!name || !phone) {
-        status.textContent = "❗ يرجى إدخال الاسم ورقم الهاتف.";
-        return;
-      }
-      if (!/^(7\d{8})$/.test(phone)) {
-        status.textContent = "❗ رقم الهاتف غير صحيح. يجب أن يتكون من 9 أرقام ويبدأ بـ7.";
-        return;
-      }
+.footer td {  
+  text-align: center;  
+  padding: 10px;  
+  font-size: 14px;  
+}  
 
-      // حفظ البيانات في localStorage
-      const client = { name, phone };
-      localStorage.setItem("client_info", JSON.stringify(client));
+.footer a {  
+  text-decoration: none;  
+  color: #333;  
+  font-weight: bold;  
+}
 
-      // حفظ بيانات الحساب في Firestore داخل مجموعة "clients" بمستند يحمل رقم الهاتف
-      setDoc(doc(db, "clients", phone), client)
-        .then(() => {
-          alert("✅ تم إنشاء الحساب بنجاح!");
-          window.location.href = "cart.html"; // الانتقال للسلة بعد التسجيل
-        })
-        .catch((error) => {
-          console.error("حدث خطأ أثناء حفظ الحساب:", error);
-          status.textContent = "❌ حدث خطأ، حاول مرة أخرى.";
-        });
-    }
-  </script>
-
-</body>
+  </style>  
+</head>  
+<body>    <div class="account-box">  
+    <h2>👤 إنشاء حساب جديد</h2>  
+    <input type="text" id="name" placeholder="ادخل اسمك الكامل">  
+    <input type="tel" id="phone" placeholder="ادخل رقم هاتفك (مثال: 771234567)">  
+    <button onclick="saveAccount()">إنشاء الحساب</button>  
+    <p id="status" style="margin-top: 15px;"></p>  
+  </div>    <div class="footer">  
+    <table width="100%">  
+      <tr align="center">  
+        <td><a href="2simpl.html">🏠<br>الرئيسية</a></td>  
+        <td><a href="offers.html">📢<br>العروض</a></td>  
+        <td><a href="cart.html">🛒<br>السلة</a></td>  
+        <td><a href="account.html">👤<br>الحساب</a></td>  
+        <td><a href="menu.html">☰<br>القائمة</a></td>  
+      </tr>  
+    </table>  
+  </div>    <script>  
+    function saveAccount() {  
+      const name = document.getElementById("name").value.trim();  
+      const phone = document.getElementById("phone").value.trim();  
+      const status = document.getElementById("status");  
+  
+      // تحقق من المدخلات  
+      if (!name || !phone) {  
+        status.textContent = "❗ يرجى إدخال الاسم ورقم الهاتف.";  
+        return;  
+      }  
+  
+      // تحقق من الرقم (يمني: 9 أرقام ويبدأ بـ7)  
+      if (!/^(7\d{8})$/.test(phone)) {  
+        status.textContent = "❗ رقم الهاتف غير صحيح. يجب أن يتكون من 9 أرقام ويبدأ بـ7.";  
+        return;  
+      }  
+  
+      const client = { name, phone };  
+      localStorage.setItem("client_info", JSON.stringify(client));  
+  
+      alert("✅ تم إنشاء الحساب بنجاح!");  
+      window.location.href = "cart.html"; // ← انتقال تلقائي للسلة بعد التسجيل  
+    }  
+  </script>  </body>  
 </html>
